Update 4. Model Evaluation Criterias.md

--- a/4. Model Evaluation Criterias.md
+++ b/4. Model Evaluation Criterias.md
@@ -5,7 +5,8 @@ ROC is the curve of TPR-FPR
 AUC is the area under ROC
 
 ## 2. Precision-Recall AUC
-
+对于极度不平衡的数据集来说，使用PR-AUC更能够准确的评价二分类器的性能。
+[The Precision-Recall Plot Is More Informative than the ROC Plot When Evaluating Binary Classifiers on Imbalanced Datasets.](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0118432)
 ## 3. EER (eaual error rate)
 EER is the point on the ROC curve where FPR=1-TPR, which mean the crossing of ROC curve and (1-FPR)
 EER is the FPR value of that point
