--- a/6.Video_Training_Experience.md
+++ b/6.Video_Training_Experience.md
@@ -1,1 +1,19 @@
-# 
+# Video Training Experience
+
+##1.  Data Preparation
+
+视频数据集一般都是数十GB起步，如果提取帧一般会达到数百GB，在机械硬盘存储下，如果直接读取帧，一般会浪费很多时间在寻址上。（当然有SSD，这个时间就少很多了）。机械硬盘存储的话，可以考虑下采用h5df格式存储。将提取出来的帧以JPEG byte的格式 存储起来，一个文件下寻址更简单。另一种方法就是直接读取视频（如果视频比较长的话），直接读取视频，使用时取帧，用计算换取io时间。
+
+## 2. Data Augmentation
+
+Video Data Augmentation 可以考虑 [video torch transform](https://github.com/hassony2/torch_videovision)
+
+## 3. Training Speedup
+
+半精度训练：Apex
+
+Dataprefetch
+
+## 4. Training Opstimizer
+
+
