--- a/6.Video_Training_Experience.md
+++ b/6.Video_Training_Experience.md
@@ -18,4 +18,6 @@ Dataprefetch
 
 ## 4. Training Opstimizer
 
+## 5. Optimize your Code
+在![Reference](https://sagivtech.com/2017/09/19/optimizing-pytorch-training-code/)中提出了一些有用的优化代码的建议，包括要
 
